# ClipManager

./: .gitignore  BUILD.md  Cargo.toml  README.md  clipManager.desktop
src/: app.rs  main.rs  storage.rs
